--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,16 @@
   pointer-events: none;
 }
 
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  padding: 6px 0px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
